--- a/package.xml
+++ b/package.xml
@@ -2,14 +2,10 @@
 <!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
 <package version="1.0">
   <name>DB_Sqlite_Tools</name>
-  <summary>DB_Sqlite_Tools is an object oriented interface to effectively manage and backup Sqlite databases.
-</summary>
-  <description>
-DB_Sqlite_Tools is an object oriented interface to effectively manage and backup Sqlite databases.
-It extends the existing functionality by providing a comprehensive solution for database backup, live 
-    replication, export in XML format, performance optmization and more.
+  <summary>DB_Sqlite_Tools is an object oriented interface to effectively manage and backup Sqlite databases.</summary>
+  <description>DB_Sqlite_Tools is an object oriented interface to effectively manage and backup Sqlite databases.It extends the existing functionality by providing a comprehensive solution for database backup, live 
+  replication, export in XML format, performance optmization and other functionalities like the insertion and retrieval of encrypted data from an Sqlite database without any external extension.
   </description>
-  <license>PHP License 3.0</license>
   <maintainers>
     <maintainer>
       <user>gurugeek</user>
@@ -19,33 +15,44 @@ It extends the existing functionality by providing a comprehensive solution for 
     </maintainer>
   </maintainers>
   <release>
-	<version>0.1.0</version>
-	<date>2004-09-05</date>
+    <version>0.1.2</version>
+    <date>2004-09-24</date>
+    <license>PHP License 3.0</license>
     <state>alpha</state>
-    <notes>
-        Initial (but fully functional) alpha  release. Check the extensive documentation and examples 
-        (see End-user Documentation) for a quick start. This package requires PHP 5. 
+    <notes>-Added the functionality to insert and retrieve
+    encrypted data from an Sqlite database
+    -Fixed a minor E_STRICT bug on the XML Parser
     </notes>
-    <filelist>
-      <dir name="/" baseinstalldir="DB/Sqlite">
-        <file role="php" name="Tools.php">
-          <replace type="package-info" from="@VER@" to="version"/>
-        </file>
-    </dir>
-      <file role="php" name="Tools/Exception.php" install-as="Tools/Exception.php" />
-      <file role="php" name="Tools/XMLParser.php" install-as="Tools/XMLParser.php" />
-      <file role="test" name="tests/CacheTest.php" install-as="CacheTest.php" />
-      <file role="test" name="tests/ftpTest.php" install-as="ftpTest.php" />
-      <file role="test" name="tests/Integritytest.php" install-as="Integritytest.php" />
-      <file role="test" name="tests/ResyncTest.php" install-as="ResyncTest.php" />
-      <file role="test" name="tests/SyncTest.php" install-as="SyncTest.php" />
-      <file role="test" name="tests/XMLExport.php" install-as="XMLExport.php" />
-    </filelist>
     <deps>
-      <dep type="php" rel="ge" version="5.0.0" optional="no" />
+      <dep type="php" rel="ge" version="5.0.0" optional="no"/>
     </deps>
+    <filelist>
+      <file role="php" baseinstalldir="DB/Sqlite" name="Tools.php">
+        <replace type="package-info" from="@VER@" to="version"/>
+      </file>
+      <file role="php" baseinstalldir="DB/Sqlite" install-as="Tools/Exception.php" name="Tools/Exception.php"/>
+      <file role="php" baseinstalldir="DB/Sqlite" install-as="Tools/XMLParser.php" name="Tools/XMLParser.php"/>
+      <file role="php" baseinstalldir="DB/Sqlite" install-as="Tools/Xtea.php" name="Tools/Xtea.php"/>
+      <file role="php" baseinstalldir="DB/Sqlite" install-as="Tools/DBC.php" name="Tools/DBC.php"/>
+    </filelist>
+  </release>
   <changelog>
-  </changelog>
-                
-        </release>
-</package>  
+  
+   <release>
+    <version>0.1.1</version>
+    <date>2004-09-08</date>
+    <license>PHP License 3.0</license>
+    <state>alpha</state>
+    <notes>Fixes XML export bug</notes>
+    </release>
+    
+    <release>
+      <version>0.1.0</version>
+      <date>2004-09-05</date>
+      <state>alpha</state>
+      <notes>Initial (but fully functional) alpha  release. Check the extensive documentation and examples 
+(see End-user Documentation) for a quick start. This package requires PHP 5. 
+</notes>
+    </release>
+</changelog>
+</package>
