--- a/package.xml
+++ b/package.xml
@@ -1,54 +1,95 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-<package version="1.0">
-  <name>DB_Sqlite_Tools</name>
-  <summary>DB_Sqlite_Tools is an object oriented interface to effectively manage and backup Sqlite databases.</summary>
-  <description>DB_Sqlite_Tools is an object oriented interface to effectively manage and backup Sqlite databases.It extends the existing functionality by providing a comprehensive solution for database backup, live 
-  replication, export in XML format, performance optmization and other functionalities like the insertion and retrieval of encrypted data from an Sqlite database without any external extension.
-  </description>
-  <maintainers>
-    <maintainer>
-      <user>gurugeek</user>
-      <name>David Costa</name>
-      <email>gurugeek@php.net</email>
-      <role>lead</role>
-    </maintainer>
-     <maintainer>
-      <user>morbid</user>
-      <name>Ashley Hewson</name>
-      <email>morbidness@gmail.com</email>
-      <role>contributor</role>
-    </maintainer>
-     <maintainer>    
-      <user>negora</user>
-      <name>Radu Negoescu</name>
-      <email>negora@dawnideas.com</email>
-      <role>contributor</role>
-    </maintainer>
- </maintainers>
-  <release>
-    <version>0.1.3</version>
-    <date>2004-09-29</date>
-    <license>BSD License</license>
-    <state>alpha</state>
-    <notes>-Replaced Xtea with ArcFour for the encryption routines
-        -fixed db connection exception
-    </notes>
-    <deps>
-      <dep type="php" rel="ge" version="5.0.0" optional="no"/>
-    </deps>
-    <filelist>
-      <file role="php" baseinstalldir="DB/Sqlite" name="Tools.php">
-        <replace type="package-info" from="@VER@" to="version"/>
+<package version="1.0" packagerversion="1.4.9">
+ <name>DB_Sqlite_Tools</name>
+ <summary>DB_Sqlite_Tools is an object oriented interface to effectively manage and backup Sqlite databases.</summary>
+ <description>DB_Sqlite_Tools is an object oriented interface to effectively manage and backup
+Sqlite databases.It extends the existing functionality by providing a
+comprehensive solution for database backup, live replication, export in XML
+format, performance optmization and other functionalities like the insertion and
+retrieval of encrypted data from an Sqlite database without any external
+extension
+ </description>
+ <maintainers>
+  <maintainer>
+   <user>gurugeek</user>
+   <name>David Costa</name>
+   <email>gurugeek@php.net</email>
+   <role>lead</role>
+  </maintainer>
+  <maintainer>
+   <user>morbid</user>
+   <name>Ashley Hewson</name>
+   <email>morbidness@gmail.com</email>
+   <role>contributor</role>
+  </maintainer>
+  <maintainer>
+   <user>negora</user>
+   <name>Radu Negoescu</name>
+   <email>negora@dawnideas.com</email>
+   <role>contributor</role>
+  </maintainer>
+  <maintainer>
+   <user>firman</user>
+   <name>Firman Wandayandi</name>
+   <email>firman@php.net</email>
+   <role>lead</role>
+  </maintainer>
+  </maintainers>
+ <release>
+  <version>0.1.4</version>
+  <date>2006-05-21</date>
+  <license>BSD License</license>
+  <state>alpha</state>
+  <notes>* Fixed Bug #2894: Improper path in Tools.php
+* Fixed Bug #2902: DBTools-&gt;copySafe($outPath);
+* Optimized code, replaced double quotes (&quot;)
+* Coding Standard cosmetic
+* More comments added
+* Removed Tools/Exception.php, replaced with PEAR_Exception
+  </notes>
+  <deps>
+   <dep type="php" rel="ge" version="5.0.0" optional="no"/>
+  </deps>
+  <filelist>
+   <dir name="DB" baseinstalldir="">
+    <dir name="Sqlite">
+     <dir name="Tools">
+      <file role="php" name="ArcFour.php">
+       <replace type="package-info" from="@package_version@" to="version"/>
       </file>
-      <file role="php" baseinstalldir="DB/Sqlite" install-as="Tools/Exception.php" name="Tools/Exception.php"/>
-      <file role="php" baseinstalldir="DB/Sqlite" install-as="Tools/XMLParser.php" name="Tools/XMLParser.php"/>
-      <file role="php" baseinstalldir="DB/Sqlite" install-as="Tools/ArcFour.php" name="Tools/ArcFour.php"/>
-      <file role="php" baseinstalldir="DB/Sqlite" install-as="Tools/DBC.php" name="Tools/DBC.php"/>
-    </filelist>
-  </release>
-  <changelog>
-<release>
+      <file role="php" name="DBC.php">
+       <replace type="package-info" from="@package_version@" to="version"/>
+      </file>
+      <file role="php" name="XMLParser.php">
+       <replace type="package-info" from="@package_version@" to="version"/>
+      </file>
+     </dir> <!-- /DB/Sqlite/Tools -->
+     <file role="php" name="Tools.php">
+      <replace type="package-info" from="@package_version@" to="version"/>
+     </file>
+    </dir> <!-- /DB/Sqlite -->
+   </dir> <!-- /DB -->
+  </filelist>
+ </release>
+ <changelog>
+   <release>
+    <version>0.1.0</version>
+    <date>2004-09-05</date>
+    <state>alpha</state>
+    <notes>Initial (but fully functional) alpha  release. Check the extensive documentation and examples 
+(see End-user Documentation) for a quick start. This package requires PHP 5.
+    </notes>
+   </release>
+   <release>
+    <version>0.1.1</version>
+    <date>2004-09-08</date>
+    <license>PHP License 3.0</license>
+    <state>alpha</state>
+    <notes>Fixes XML export bug
+    </notes>
+   </release>
+   <release>
     <version>0.1.2</version>
     <date>2004-09-24</date>
     <license>PHP License 3.0</license>
@@ -57,22 +98,28 @@
     encrypted data from an Sqlite database
     -Fixed a minor E_STRICT bug on the XML Parser
     </notes>
-    </release>
+   </release>
    <release>
-    <version>0.1.1</version>
-    <date>2004-09-08</date>
-    <license>PHP License 3.0</license>
+    <version>0.1.3</version>
+    <date>2004-09-29</date>
+    <license>BSD License</license>
     <state>alpha</state>
-    <notes>Fixes XML export bug</notes>
-    </release>
-    
-    <release>
-      <version>0.1.0</version>
-      <date>2004-09-05</date>
-      <state>alpha</state>
-      <notes>Initial (but fully functional) alpha  release. Check the extensive documentation and examples 
-(see End-user Documentation) for a quick start. This package requires PHP 5. 
-</notes>
-    </release>
-</changelog>
+    <notes>-Replaced Xtea with ArcFour for the encryption routines
+        -fixed db connection exception
+    </notes>
+   </release>
+   <release>
+    <version>0.1.4</version>
+    <date>2006-05-21</date>
+    <license>BSD License</license>
+    <state>alpha</state>
+    <notes>* Fixed Bug #2894: Improper path in Tools.php
+* Fixed Bug #2902: DBTools-&gt;copySafe($outPath);
+* Optimized code, replaced double quotes (&quot;)
+* Coding Standard cosmetic
+* More comments added
+* Removed Tools/Exception.php, replaced with PEAR_Exception
+    </notes>
+   </release>
+ </changelog>
 </package>
