--- a/package.xml
+++ b/package.xml
@@ -1,133 +1,206 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-<package version="1.0" packagerversion="1.4.9">
+<?xml version="1.0" encoding="UTF-8"?>
+<package packagerversion="1.9.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
  <name>DB_Sqlite_Tools</name>
+ <channel>pear.php.net</channel>
  <summary>DB_Sqlite_Tools is an object oriented interface to effectively manage and backup Sqlite databases.</summary>
  <description>DB_Sqlite_Tools is an object oriented interface to effectively manage and backup
 Sqlite databases.It extends the existing functionality by providing a
 comprehensive solution for database backup, live replication, export in XML
 format, performance optmization and other functionalities like the insertion and
 retrieval of encrypted data from an Sqlite database without any external
-extension
- </description>
- <maintainers>
-  <maintainer>
-   <user>gurugeek</user>
-   <name>David Costa</name>
-   <email>gurugeek@php.net</email>
-   <role>lead</role>
-  </maintainer>
-  <maintainer>
-   <user>morbid</user>
-   <name>Ashley Hewson</name>
-   <email>morbidness@gmail.com</email>
-   <role>contributor</role>
-  </maintainer>
-  <maintainer>
-   <user>negora</user>
-   <name>Radu Negoescu</name>
-   <email>negora@dawnideas.com</email>
-   <role>contributor</role>
-  </maintainer>
-  <maintainer>
-   <user>firman</user>
-   <name>Firman Wandayandi</name>
-   <email>firman@php.net</email>
-   <role>lead</role>
-  </maintainer>
-  </maintainers>
- <release>
-  <version>0.1.5</version>
-  <date>2006-05-27</date>
-  <license>BSD License</license>
-  <state>alpha</state>
-  <notes>* Fixed bug: print_r() with no return value
-  </notes>
-  <deps>
-   <dep type="php" rel="ge" version="5.0.0" optional="no"/>
-  </deps>
-  <filelist>
-   <dir name="/" baseinstalldir="">
-    <dir name="DB">
-     <dir name="Sqlite">
-      <dir name="Tools">
-       <file role="php" name="ArcFour.php">
-        <replace type="package-info" from="@package_version@" to="version"/>
-       </file>
-       <file role="php" name="DBC.php">
-        <replace type="package-info" from="@package_version@" to="version"/>
-       </file>
-       <file role="php" name="XMLParser.php">
-        <replace type="package-info" from="@package_version@" to="version"/>
-       </file>
-      </dir> <!-- /DB/Sqlite/Tools -->
-      <file role="php" name="Tools.php">
-       <replace type="package-info" from="@package_version@" to="version"/>
-      </file>
-     </dir> <!-- /DB/Sqlite -->
-    </dir> <!-- /DB -->
-    <file role="data" name="package2.xml">
-     <replace type="package-info" from="@package_version@" to="version"/>
-    </file>
-   </dir> <!-- / -->
-  </filelist>
- </release>
+extension</description>
+ <lead>
+  <name>David Costa</name>
+  <user>gurugeek</user>
+  <email>gurugeek@php.net</email>
+  <active>yes</active>
+ </lead>
+ <lead>
+  <name>Firman Wandayandi</name>
+  <user>firman</user>
+  <email>firman@php.net</email>
+  <active>yes</active>
+ </lead>
+ <contributor>
+  <name>Ashley Hewson</name>
+  <user>morbid</user>
+  <email>morbidness@gmail.com</email>
+  <active>yes</active>
+ </contributor>
+ <contributor>
+  <name>Radu Negoescu</name>
+  <user>negora</user>
+  <email>negora@dawnideas.com</email>
+  <active>yes</active>
+ </contributor>
+ <date>2010-09-20</date>
+ <time>09:25:38</time>
+ <version>
+  <release>0.1.7</release>
+  <api>0.1.5</api>
+ </version>
+ <stability>
+  <release>alpha</release>
+  <api>alpha</api>
+ </stability>
+ <license>BSD License</license>
+ <notes>
+QA release
+Package 2.0
+Bug #17719 PATCH Using preg_match instead of deprecated functions
+Bug #7863 bad md5sum for file package2.xm
+ </notes>
+ <contents>
+  <dir baseinstalldir="/" name="/">
+   <file baseinstalldir="" md5sum="7322b1eceff5917cd41ebaba48f6c99e" name="DB/Sqlite/Tools.php" role="php">
+    <tasks:replace from="@package_version@" to="version" type="package-info" />
+   </file>
+   <file baseinstalldir="/" md5sum="d9edb507bc9ce80cd87b1b40756d2a10" name="DB/Sqlite/Tools/ArcFour.php" role="php">
+    <tasks:replace from="@package_version@" to="version" type="package-info" />
+   </file>
+   <file baseinstalldir="" md5sum="358e426fe09227d267e5a6764d73e686" name="DB/Sqlite/Tools/DBC.php" role="php">
+    <tasks:replace from="@package_version@" to="version" type="package-info" />
+   </file>
+   <file baseinstalldir="" md5sum="d705c853dc0a470f7fc99be59fa85077" name="DB/Sqlite/Tools/XMLParser.php" role="php">
+    <tasks:replace from="@package_version@" to="version" type="package-info" />
+   </file>
+   <file baseinstalldir="/" md5sum="14dfead06a684d235b32c4761fe03f8e" name="tests/CacheTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="13a415cabbc82f66c68be5fd56ee2ed3" name="tests/ftpTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="e3996f842ab80193d54c7f2007339cf9" name="tests/Integritytest.php" role="test" />
+   <file baseinstalldir="/" md5sum="acbecc53c03d8f5571524448a9662b93" name="tests/ResyncTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="9fdc204690c7d2b6543a0f623a126006" name="tests/SyncTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="ac39a21f46bd50c328b9811d680643b2" name="tests/XMLExport.php" role="test" />
+   <file baseinstalldir="/" md5sum="6fc4f21cee33976e8ed8e3139398765d" name="generate_package_xml.php" role="php" />
+  </dir>
+ </contents>
+ <dependencies>
+  <required>
+   <php>
+    <min>5.0.0</min>
+   </php>
+   <pearinstaller>
+    <min>1.4.0b1</min>
+   </pearinstaller>
+  </required>
+ </dependencies>
+ <phprelease />
  <changelog>
-   <release>
-    <version>0.1.0</version>
-    <date>2004-09-05</date>
-    <state>alpha</state>
-    <notes>Initial (but fully functional) alpha  release. Check the extensive documentation and examples 
+  <release>
+   <version>
+    <release>0.1.0</release>
+    <api>0.1.0</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2004-09-05</date>
+   <license>BSD License</license>
+   <notes>
+Initial (but fully functional) alpha  release. Check the extensive documentation and examples 
 (see End-user Documentation) for a quick start. This package requires PHP 5.
-    </notes>
-   </release>
-   <release>
-    <version>0.1.1</version>
-    <date>2004-09-08</date>
-    <license>PHP License 3.0</license>
-    <state>alpha</state>
-    <notes>Fixes XML export bug
-    </notes>
-   </release>
-   <release>
-    <version>0.1.2</version>
-    <date>2004-09-24</date>
-    <license>PHP License 3.0</license>
-    <state>alpha</state>
-    <notes>-Added the functionality to insert and retrieve
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.1.1</release>
+    <api>0.1.1</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2004-09-08</date>
+   <license uri="http://www.example.com">PHP License 3.0</license>
+   <notes>
+Fixes XML export bug
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.1.2</release>
+    <api>0.1.2</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2004-09-24</date>
+   <license uri="http://www.example.com">PHP License 3.0</license>
+   <notes>
+-Added the functionality to insert and retrieve
     encrypted data from an Sqlite database
     -Fixed a minor E_STRICT bug on the XML Parser
-    </notes>
-   </release>
-   <release>
-    <version>0.1.3</version>
-    <date>2004-09-29</date>
-    <license>BSD License</license>
-    <state>alpha</state>
-    <notes>-Replaced Xtea with ArcFour for the encryption routines
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.1.3</release>
+    <api>0.1.3</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2004-09-29</date>
+   <license uri="http://www.example.com">BSD License</license>
+   <notes>
+-Replaced Xtea with ArcFour for the encryption routines
         -fixed db connection exception
-    </notes>
-   </release>
-   <release>
-    <version>0.1.4</version>
-    <date>2006-05-21</date>
-    <license>BSD License</license>
-    <state>alpha</state>
-    <notes>* Fixed Bug #2894: Improper path in Tools.php
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.1.4</release>
+    <api>0.1.4</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2006-05-21</date>
+   <license uri="http://www.example.com">BSD License</license>
+   <notes>
+* Fixed Bug #2894: Improper path in Tools.php
 * Fixed Bug #2902: DBTools-&gt;copySafe($outPath);
 * Optimized code, replaced double quotes (&quot;)
 * Coding Standard cosmetic
 * More comments added
 * Removed Tools/Exception.php, replaced with PEAR_Exception
-    </notes>
-   </release>
-   <release>
-    <version>0.1.5</version>
-    <date>2006-05-27</date>
-    <license>BSD License</license>
-    <state>alpha</state>
-    <notes>* Fixed bug: print_r() with no return value
-    </notes>
-   </release>
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.1.5</release>
+    <api>0.1.5</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2006-05-27</date>
+   <license uri="http://www.example.com">BSD License</license>
+   <notes>
+* Fixed bug: print_r() with no return value
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.1.7</release>
+    <api>0.1.5</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2010-09-20</date>
+   <license>BSD License</license>
+   <notes>
+QA release
+Package 2.0
+Bug #17719 PATCH Using preg_match instead of deprecated functions
+Bug #7863 bad md5sum for file package2.xm
+   </notes>
+  </release>
  </changelog>
 </package>
